# daily-quote

./: README.md  daily_quote.opam  dune-project
demo_csv/: greek_philo.csv  little_prince.csv  movie.csv  stoic.csv  stoicism.csv  sun_tzu.csv
lib/: draw.ml  draw.mli  dune  quote.ml  quote.mli
test/: dune
